--- a/index.html
+++ b/index.html
@@ -109,29 +109,31 @@
             </div>
         </div>
     </section>
-<section class="projects-section pt-5 pb-5" style="background: linear-gradient(to bottom, rgba(255,255,255,0.9), #f8f9fa);">
-  <div class="container text-center">
-    <!-- Ayat Pembuka -->
-    <h2 class="display-6 fw-semibold mb-2" style="color: #3c2f2f; font-family: 'DM Serif Display', serif;">
-      بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ
-    </h2>
 
-    <!-- Salam -->
-    <p class="mt-3 fs-5" style="color: #5b472e; font-family: 'DM Serif Text', serif;">
-      Assalamualaikum Warahmatullahi Wabarakatuh
-    </p>
+    <section class="projects-section pt-5"
+        style="background: linear-gradient(to bottom, rgba(255,255,255,0.9), #f8f9fa);">
+        <div class="container text-center">
+            <!-- Ayat Pembuka -->
+            <h2 class="display-6 fw-semibold mb-2" style="color: #3c2f2f; font-family: 'DM Serif Display', serif;">
+                بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ
+            </h2>
 
-    <!-- Undangan Teks -->
-    <p class="fs-6 mx-auto" style="max-width: 1000px; color: #333; font-family: 'DM Serif Text', serif;">
-      Dengan memohon Rahmat & Ridho Allah SWT, kami bermaksud mengundang Bapak/Ibu/Saudara/i untuk menghadiri
-      acara pernikahan kami:
-    </p>
+            <!-- Salam -->
+            <p class="mt-3 fs-5" style="color: #5b472e; font-family: 'DM Serif Text', serif;">
+                Assalamualaikum Warahmatullahi Wabarakatuh
+            </p>
 
-<!-- Container untuk foto & dekorasi -->
-<div class="container text-center position-relative" style="height: 500px;">
-  <!-- Foto Pasangan -->
-  <div class="my-4">
-    <img src="assets/img/pegantin-pria.jpg" alt="Foto Pengantin" class="img-fluid shadow" style="
+            <!-- Undangan Teks -->
+            <p class="fs-6 mx-auto" style="max-width: 1000px; color: #333; font-family: 'DM Serif Text', serif;">
+                Dengan memohon Rahmat & Ridho Allah SWT, kami bermaksud mengundang Bapak/Ibu/Saudara/i untuk menghadiri
+                acara pernikahan kami:
+            </p>
+
+            <!-- Container untuk foto & dekorasi -->
+            <div class="container text-center position-relative" style="height: 500px;">
+                <!-- Foto Pasangan -->
+                <div class="my-4">
+                    <img src="assets/img/pegantin-pria.jpg" alt="Foto Pengantin" class="img-fluid shadow" style="
       width: 280px;
       height: 290px;
       object-fit: cover;
@@ -143,86 +145,197 @@
       box-shadow: 0 5px 15px rgba(0,0,0,0.2);
     ">
 
-    <!-- Nama Pengantin: Pindahkan ke dalam container -->
-    <h1 class="judul-nama-pengantin fade-in-text" style="margin-top: 70px;">
-      Alpian Sugandi
-    </h1>
-  </div>
+                    <!-- Nama Pengantin: Pindahkan ke dalam container -->
+                    <h1 class="judul-nama-pengantin fade-in-text" style="margin-top: 70px;">
+                        Alpian Sugandi
+                    </h1>
+                    <p style="color: #333; font-family: 'DM Serif Text', serif;">Putra Pertama dari 2 Bersaudara dari
+                        Bapak Sarbidi & Ibu Jamilah</p>
+                </div>
 
-  <!-- Bunga kiri -->
-  <img src="assets/img/bunga-kiri.png" alt="Bunga Kiri" class="bunga-dekor kiri">
+                <!-- Bunga kiri -->
+                <img src="assets/img/bunga-kiri.png" alt="Bunga Kiri" class="bunga-dekor kiri">
 
-  <!-- Bunga kanan -->
-  <img src="assets/img/bunga-kanan.png" alt="Bunga Kanan" class="bunga-dekor kanan">
+                <!-- Bunga kanan -->
+                <img src="assets/img/bunga-kanan.png" alt="Bunga Kanan" class="bunga-dekor kanan">
 
-  <!-- Tanaman bawah -->
-  <img src="assets/img/tanaman-bawah.png" alt="Tanaman Bawah" class="tanaman-bawah">
-</div>
+                <!-- Tanaman bawah -->
+                <img src="assets/img/tanaman-bawah.png" alt="Tanaman Bawah" class="tanaman-bawah">
+            </div>
+            <!-- Simbol & di tengah -->
+            <div class="d-flex justify-content-center align-items-center">
+                <h1 class="judul-nama-pengantin fade-in-text" style="margin: 0 20px;">&</h1>
+            </div>
+            <!-- Container untuk foto & dekorasi -->
+            <div class="container text-center position-relative" style="height: 500px;">
+                <!-- Foto Pasangan -->
+                <div class="my-4">
+                    <img src="assets/img/pegantin-wanita.jpg" alt="Foto Pengantin" class="img-fluid shadow" style="
+      width: 280px;
+      height: 290px;
+      object-fit: cover;
+      border-top-left-radius: 150px;
+      border-top-right-radius: 150px;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+      border: 5px solid #fff;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    ">
 
-    <!-- Nama Pengantin -->
-    <h3 class="mt-3 mb-1" style="font-family: 'DM Serif Display', serif; color: #8c5c3b;">Alpian Sugandi</h3>
-    <h4 class="mb-3" style="font-family: 'DM Serif Display', serif; color: #8c5c3b;">&</h4>
-    <h3 class="mb-4" style="font-family: 'DM Serif Display', serif; color: #8c5c3b;">Vina Sugandi</h3>
-  </div>
-</section>
-<section class="undangan-dekorasi py-5">
-  <div class="container text-center position-relative" style="height: 500px;">
+                    <!-- Nama Pengantin: Pindahkan ke dalam container -->
+                    <h1 class="judul-nama-pengantin fade-in-text" style="margin-top: 70px;">
+                        Vina
+                    </h1>
+                    <p style="color: #333; font-family: 'DM Serif Text', serif;">Putri Pertama dari 2 Bersaudara dari
+                        Bapak Sarbidi & Ibu Jamilah</p>
+                </div>
 
-        <!-- Foto Pasangan -->
-    <div class="my-4">
-      <img src="assets/img/pegantin-pria.jpg" alt="Foto Pengantin" class="img-fluid shadow" style="
-        width: 280px;
-        height: 320px;
-        object-fit: cover;
-        border-top-left-radius: 150px;
-        border-top-right-radius: 150px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        border: 5px solid #fff;
-        box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-      ">
-    </div>
+                <!-- Bunga kiri -->
+                <img src="assets/img/bunga-kiri.png" alt="Bunga Kiri" class="bunga-dekor kiri">
 
-    <!-- Bunga kiri -->
-    <img src="assets/img/bunga-kiri.png" alt="Bunga Kiri" class="bunga-dekor kiri">
+                <!-- Bunga kanan -->
+                <img src="assets/img/bunga-kanan.png" alt="Bunga Kanan" class="bunga-dekor kanan">
 
-    <!-- Bunga kanan -->
-    <img src="assets/img/bunga-kanan.png" alt="Bunga Kanan" class="bunga-dekor kanan">
+                <!-- Tanaman bawah -->
+                <img src="assets/img/tanaman-bawah.png" alt="Tanaman Bawah" class="tanaman-bawah">
+            </div><br>
 
-    <!-- Tanaman bawah -->
-    <img src="assets/img/tanaman-bawah.png" alt="Tanaman Bawah" class="tanaman-bawah">
+            <p class="font-header eb-garamond-uniquifier" style="font-size: 36px !important;">
+                Save The Date
+            </p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#BF9264"
+                class="bi bi-envelope-heart-fill" viewBox="0 0 16 16">
+                <path
+                    d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555l-4.2 2.568a2.785 2.785 0 0 0-.051-.105c-.666-1.3-2.363-1.917-3.699-1.25-1.336-.667-3.033-.05-3.699 1.25l-.05.105L.05 3.555ZM11.584 8.91a4.694 4.694 0 0 1-.073.139L16 11.8V4.697l-4.003 2.447c.027.562-.107 1.163-.413 1.767Zm-4.135 3.05c-1.048-.693-1.84-1.39-2.398-2.082L.19 12.856A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144L10.95 9.878c-.559.692-1.35 1.389-2.398 2.081L8 12.324l-.551-.365ZM4.416 8.91c-.306-.603-.44-1.204-.413-1.766L0 4.697v7.104l4.49-2.752a4.742 4.742 0 0 1-.074-.138Z" />
+                <path d="M8 5.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z" />
+            </svg>
+            <div class="invitation-container">
+                <div class="left-date">
+                    <h4>MINGGU</h4>
+                    <h1>12</h1>
+                    <p>OKTOBER 2025</p>
+                </div>
 
-  </div>
-</section>
-<section class="undangan-dekorasi py-5">
-  <div class="container text-center position-relative" style="height: 500px;">
+                <div class="middle-content">
+                    <h3>Resepsi Pernikahan</h3>
+                    <p>08.00 – Selesai</p>
+                    <hr style="margin: 10px auto; width: 60%; border: 0.5px solid #999;">
+                    <p>
+                        Jalan D.I Panjaitan Lr. Lama<br>
+                        Kelurahan Bagus Kuning Kecamatan Plaju<br>
+                        Kota Palembang
+                    </p>
+                </div>
+            </div>
+            <!-- Bagian Bawah: Maps -->
+            <div class="map-box">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3984.37775251757!2d104.80948357359667!3d-2.992488896983538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e3b77d9b54b7a91%3A0xbcccb8a47d7e9ea6!2sSMP%20Negeri%2056%20Palembang!5e0!3m2!1sid!2sid!4v1750157243667!5m2!1sid!2sid"
+                    loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </div>
+    </section>
+   <section class="rekening-section py-5 text-center" id="rekening" style="background: #f8f9fa;">
+        <div class="container">
+            <h1 class="judul-nama-pengantin fade-in-text text-center">
+                Love Gift
+            </h1>
+            <p>Tanpa mengurangi rasa hormat, bagi anda yang ingin memberikan tanda kasih untuk kami, dapat melalui :</p>
+            <div class="row justify-content-center g-4">
+                <!-- BANK BCA -->
+                <div class="col-md-5">
+                    <div class="card h-100 border-0 rounded-5 shadow-sm">
+                        <div class="card-body">
+                            <img src="assets/img/bca.svg" alt="Logo Bank BCA" class="mb-3" style="height: 40px;">
+                            <p class="card-text mb-1">No. Rekening</p>
+                            <strong class="fs-5" id="rekeningBCA">1234567890</strong>
+                            <p class="mb-2">a.n. Vina Sugandi</p>
+                            <button class="btn btn-outline-secondary btn-sm"
+                                onclick="salinRekening('rekeningBCA')">Salin</button>
+                        </div>
+                    </div>
+                </div>
 
-        <!-- Foto Pasangan -->
-    <div class="my-4">
-      <img src="assets/img/pegantin-wanita.jpg" alt="Foto Pengantin" class="img-fluid shadow" style="
-        width: 280px;
-        height: 320px;
-        object-fit: cover;
-        border-top-left-radius: 150px;
-        border-top-right-radius: 150px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-        border: 5px solid #fff;
-        box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-      ">
-    </div>
+                <!-- BANK MANDIRI -->
+                <div class="col-md-5">
+                    <div class="card h-100 border-0 rounded-5 shadow-sm">
+                        <div class="card-body">
+                            <img src="assets/img/bank.svg" alt="Logo Bank Mandiri" class="mb-3" style="height: 40px;">
+                            <p class="card-text mb-1">No. Rekening</p>
+                            <strong class="fs-5" id="rekeningMandiri">9876543210</strong>
+                            <p class="mb-2">a.n. Alpian Sugandi</p>
+                            <button class="btn btn-outline-secondary btn-sm"
+                                onclick="salinRekening('rekeningMandiri')">Salin</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <!-- Bunga kiri -->
-    <img src="assets/img/bunga-kiri.png" alt="Bunga Kiri" class="bunga-dekor kiri">
 
-    <!-- Bunga kanan -->
-    <img src="assets/img/bunga-kanan.png" alt="Bunga Kanan" class="bunga-dekor kanan">
 
-    <!-- Tanaman bawah -->
-    <img src="assets/img/tanaman-bawah.png" alt="Tanaman Bawah" class="tanaman-bawah">
+<section class="wishas" id="wishas" style="
+  background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url('assets/img/bg-pesan.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+">
 
-  </div>
-</section>
+
+        <div class="container my-2">
+            <div class="wish-form-container d-flex align-items-center p-5 rounded-5 shadow-sm"
+                style="background-color: rgba(255, 255, 255, 0.85);">
+                <div class="wish-form" data-aos="zoom-in" data-aos-duration="1000">
+                    <h1 class="judul-nama-pengantin fade-in-text text-center">
+                        Do'a dan Ucapan
+                    </h1>
+                    <form>
+                        <label for="name">Nama</label>
+                        <input type="text" name="name" id="name" placeholder="Masukkan nama anda" autocomplete="off"
+                            required />
+
+                        <label for="message">Ucapan & Doa</label>
+                        <textarea name="message" id="message" placeholder="Tulis ucapan & doa" required
+                            minlength="8"></textarea>
+
+                        <button type="submit">Kirim</button>
+                    </form>
+                </div>
+            </div>
+
+            <div class="wish-comment-list" data-aos="zoom-in" data-aos-duration="1000">
+                <hr />
+                <ul aria-label="list komentar"></ul>
+                <hr style="margin-top: 1rem" />
+                <div class="button-grup">
+                    <button>
+                        <i class="bx bxs-left-arrow-circle"></i>
+                        <span>Sebelumnya</span>
+                    </button>
+                    <span class="page-number">1</span>
+                    <button>
+                        <span>Selanjutnya</span>
+                        <i class="bx bxs-right-arrow-circle"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="py-5">
+        <!-- Undangan Teks -->
+            <p class="fs-6 mx-auto" style="max-width: 1000px; color: #333; font-family: 'DM Serif Text', serif;">
+                Merupakan suatu kebahagiaan dan kehormatan bagi kami, apabila Bapak/Ibu/Saudara/i, berkenan hadir dan
+                memberikan
+                do'a restu kepada kedua mempelai
+            </p>
+            <!-- Salam -->
+            <p class="mt-3 fs-5" style="color: #5b472e; font-family: 'DM Serif Text', serif;">
+                Wassalamualaikum Warahmatullahi Wabarakatuh
+            </p>
+            </div>
+    </section>
+
 
     <!-- Audio -->
     <div id="audio-container">
@@ -383,16 +496,62 @@
 
 
     <script>
-        function setMastheadHeight() {
-            const masthead = document.querySelector('.masthead');
-            if (masthead) {
-                masthead.style.height = window.innerHeight + 'px';
-            }
+        const form = document.querySelector('.wish-form form');
+        const ul = document.querySelector('.wish-comment-list ul');
+
+        function buatKomentar(nama, pesan) {
+            const li = document.createElement('li');
+
+            li.innerHTML = `
+    <div class="avatar">${nama[0].toUpperCase()}</div>
+    <div class="content">
+      <h4>${nama}</h4>
+      <p>${pesan}</p>
+    </div>
+  `;
+
+            ul.prepend(li);
         }
 
-        window.addEventListener('resize', setMastheadHeight);
-        window.addEventListener('load', setMastheadHeight);
+        form.addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            const nama = form.name.value.trim();
+            const pesan = form.message.value.trim();
+
+            if (!nama || !pesan) {
+                alert('Harap lengkapi semua bidang!');
+                return;
+            }
+
+            buatKomentar(nama, pesan);
+            form.reset();
+        });
     </script>
+
+    <script>
+        function salinRekening(id) {
+            const rekening = document.getElementById(id).innerText;
+            navigator.clipboard.writeText(rekening).then(() => {
+                const toast = document.getElementById('copyToast');
+                toast.style.display = 'block';
+
+                setTimeout(() => {
+                    toast.style.display = 'none';
+                }, 1000);
+            }).catch(() => {
+                alert("Gagal menyalin nomor rekening.");
+            });
+        }
+    </script>
+
+    </script>
+
+    <!-- Toast Notifikasi -->
+    <div id="copyToast" class="position-fixed top-50 start-50 translate-middle text-white py-2 px-4 rounded shadow"
+        style="z-index: 9999; display: none; background-color: #7B4019;">
+        No. rekening telah disalin
+    </div>
 
 </body>
 
