--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
 
 <section class="wishas" id="wishas" style="
-  background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url('assets/img/bg-pesan.jpg');
+  background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url('assets/img/bg-ds.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
