--- a/index.html
+++ b/index.html
@@ -312,11 +312,11 @@
                 <div class="button-grup">
                     <button>
                         <i class="bx bxs-left-arrow-circle"></i>
-                        <span>Sebelumnya</span>
+                        <span>Prev</span>
                     </button>
                     <span class="page-number">1</span>
                     <button>
-                        <span>Selanjutnya</span>
+                        <span>Next</span>
                         <i class="bx bxs-right-arrow-circle"></i>
                     </button>
                 </div>
