--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                     </button>
                     <span class="page-number">1</span>
                     <button>
-                        <span>Selanjutnya</span>
+                        <span>Next</span>
                         <i class="bx bxs-right-arrow-circle"></i>
                     </button>
                 </div>
