--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                             <small class="mt-3">Minggu, 12 Oktober 2025</small>
                             <hr class="border-secondary w-50 mx-auto" />
                             <p id="tamu">Kepada Yth.</p>
+<p id="nama-tamu"></p>
+
 
                             <button type="button" class="btn bg-berem btn-secondary text-white rounded-4"
                                 data-bs-dismiss="modal" onclick="playAudio()">
@@ -564,16 +566,17 @@
         }
     </script>
  <script>
-        function getQueryParam(param) {
-            const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(param);
-        }
+    function getQueryParam(param) {
+        const urlParams = new URLSearchParams(window.location.search);
+        return urlParams.get(param);
+    }
 
-        const namaTamu = getQueryParam("to");
-        if (namaTamu) {
-            document.getElementById("tamu").textContent = "Kepada Yth. " + decodeURIComponent(namaTamu.replace(/\+/g, " "));
-        }
-    </script>
+    const namaTamu = getQueryParam("to");
+    if (namaTamu) {
+        document.getElementById("nama-tamu").textContent = decodeURIComponent(namaTamu.replace(/\+/g, " "));
+    }
+</script>
+
 
     </script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
