--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <small class="mt-3">Minggu, 12 Oktober 2025</small>
                             <hr class="border-secondary w-50 mx-auto" />
                             <p id="tamu">Kepada Yth.</p>
-<p id="nama-tamu"></p>
+                            <p id="nama-tamu" class="font-header dancing-script-uniquifier"></p>
 
 
                             <button type="button" class="btn bg-berem btn-secondary text-white rounded-4"
@@ -77,7 +77,7 @@
     <!--  -->
 
     <!-- header -->
-    <section id="hero" 
+    <section id="hero"
         class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
         <div class="container my-2">
             <div class="d-flex align-items-center p-5 rounded-5 shadow-sm"
@@ -116,27 +116,31 @@
         </div>
     </section>
 
-    <section class="projects-section pt-5" 
+    <section class="projects-section pt-5"
         style="background: linear-gradient(to bottom, rgba(255,255,255,0.9), #f8f9fa);">
         <div class="container text-center">
             <!-- Ayat Pembuka -->
-            <h2 class="display-6 fw-semibold mb-2" data-aos="zoom-in" data-aos-duration="1000" style="color: #3c2f2f; font-family: 'DM Serif Display', serif;">
+            <h2 class="display-6 fw-semibold mb-2" data-aos="zoom-in" data-aos-duration="1000"
+                style="color: #3c2f2f; font-family: 'DM Serif Display', serif;">
                 بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ
             </h2>
 
             <!-- Salam -->
-            <p class="mt-3 fs-5" data-aos="zoom-in" data-aos-duration="1000" style="color: #5b472e; font-family: 'DM Serif Text', serif;" >
+            <p class="mt-3 fs-5" data-aos="zoom-in" data-aos-duration="1000"
+                style="color: #5b472e; font-family: 'DM Serif Text', serif;">
                 Assalamualaikum Warahmatullahi Wabarakatuh
             </p>
 
             <!-- Undangan Teks -->
-            <p class="fs-6 mx-auto" data-aos="zoom-in" data-aos-duration="1000" style="max-width: 1000px; color: #333; font-family: 'DM Serif Text', serif;">
+            <p class="fs-6 mx-auto" data-aos="zoom-in" data-aos-duration="1000"
+                style="max-width: 1000px; color: #333; font-family: 'DM Serif Text', serif;">
                 Dengan memohon Rahmat & Ridho Allah SWT, kami bermaksud mengundang Bapak/Ibu/Saudara/i untuk menghadiri
                 acara pernikahan kami:
             </p>
 
             <!-- Container untuk foto & dekorasi -->
-            <div class="container text-center position-relative" style="height: 500px;"data-aos="zoom-in" data-aos-duration="1000">
+            <div class="container text-center position-relative" style="height: 500px;" data-aos="zoom-in"
+                data-aos-duration="1000">
                 <!-- Foto Pasangan -->
                 <div class="my-4">
                     <img src="assets/img/pegantin-pria.jpg" alt="Foto Pengantin" class="img-fluid shadow" style="
@@ -173,7 +177,8 @@
                 <h1 class="judul-nama-pengantin fade-in-text" style="margin: 0 20px;">&</h1>
             </div>
             <!-- Container untuk foto & dekorasi -->
-            <div class="container text-center position-relative" style="height: 500px;" data-aos="zoom-in" data-aos-duration="1000">
+            <div class="container text-center position-relative" style="height: 500px;" data-aos="zoom-in"
+                data-aos-duration="1000">
                 <!-- Foto Pasangan -->
                 <div class="my-4">
                     <img src="assets/img/pegantin-wanita.jpg" alt="Foto Pengantin" class="img-fluid shadow" style="
@@ -212,7 +217,8 @@
                     d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555l-4.2 2.568a2.785 2.785 0 0 0-.051-.105c-.666-1.3-2.363-1.917-3.699-1.25-1.336-.667-3.033-.05-3.699 1.25l-.05.105L.05 3.555ZM11.584 8.91a4.694 4.694 0 0 1-.073.139L16 11.8V4.697l-4.003 2.447c.027.562-.107 1.163-.413 1.767Zm-4.135 3.05c-1.048-.693-1.84-1.39-2.398-2.082L.19 12.856A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144L10.95 9.878c-.559.692-1.35 1.389-2.398 2.081L8 12.324l-.551-.365ZM4.416 8.91c-.306-.603-.44-1.204-.413-1.766L0 4.697v7.104l4.49-2.752a4.742 4.742 0 0 1-.074-.138Z" />
                 <path d="M8 5.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z" />
             </svg>
-            <p class="font-header eb-garamond-uniquifier" style="font-size: 36px !important;" data-aos="zoom-in" data-aos-duration="1000">
+            <p class="font-header eb-garamond-uniquifier" style="font-size: 36px !important;" data-aos="zoom-in"
+                data-aos-duration="1000">
                 Save The Date
             </p>
             <div class="invitation-container" data-aos="zoom-in" data-aos-duration="1000">
@@ -247,7 +253,8 @@
             <h1 class="judul-nama-pengantin fade-in-text text-center" data-aos="zoom-in" data-aos-duration="1000">
                 Love Gift
             </h1>
-            <p data-aos="zoom-in" data-aos-duration="1000">Doa Restu Anda merupakan karunia yang sangat berarti bagi kami. Bagi anda yang ingin memberikan tanda kasih untuk kami, dapat melalui :</p>
+            <p data-aos="zoom-in" data-aos-duration="1000">Doa Restu Anda merupakan karunia yang sangat berarti bagi
+                kami. Bagi anda yang ingin memberikan tanda kasih untuk kami, dapat melalui :</p>
             <div class="row justify-content-center g-4" data-aos="zoom-in" data-aos-duration="1000">
                 <!-- BANK BCA -->
                 <div class="col-md-5">
@@ -330,13 +337,15 @@
         </div>
         <div class="py-5">
             <!-- Undangan Teks -->
-            <p class="fs-6 mx-auto" style="max-width: 1000px; color: #333; font-family: 'DM Serif Text', serif;" data-aos="zoom-in" data-aos-duration="1000">
+            <p class="fs-6 mx-auto" style="max-width: 1000px; color: #333; font-family: 'DM Serif Text', serif;"
+                data-aos="zoom-in" data-aos-duration="1000">
                 Merupakan suatu kebahagiaan dan kehormatan bagi kami, apabila Bapak/Ibu/Saudara/i, berkenan hadir dan
                 memberikan
                 do'a restu kepada kedua mempelai
             </p>
             <!-- Salam -->
-            <p class="mt-3 fs-5" style="color: #5b472e; font-family: 'DM Serif Text', serif;" data-aos="zoom-in" data-aos-duration="1000">
+            <p class="mt-3 fs-5" style="color: #5b472e; font-family: 'DM Serif Text', serif;" data-aos="zoom-in"
+                data-aos-duration="1000">
                 KAMI YANG BERBAHAGIA
             </p>
         </div>
@@ -565,17 +574,17 @@
             });
         }
     </script>
- <script>
-    function getQueryParam(param) {
-        const urlParams = new URLSearchParams(window.location.search);
-        return urlParams.get(param);
-    }
+    <script>
+        function getQueryParam(param) {
+            const urlParams = new URLSearchParams(window.location.search);
+            return urlParams.get(param);
+        }
 
-    const namaTamu = getQueryParam("to");
-    if (namaTamu) {
-        document.getElementById("nama-tamu").textContent = decodeURIComponent(namaTamu.replace(/\+/g, " "));
-    }
-</script>
+        const namaTamu = getQueryParam("to");
+        if (namaTamu) {
+            document.getElementById("nama-tamu").textContent = decodeURIComponent(namaTamu.replace(/\+/g, " "));
+        }
+    </script>
 
 
     </script>
