--- a/index.html
+++ b/index.html
@@ -585,6 +585,7 @@
             document.getElementById("nama-tamu").textContent = decodeURIComponent(namaTamu.replace(/\+/g, " "));
         }
     </script>
+    </script>
 
 
     </script>
