--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <small class="mt-3">Minggu, 12 Oktober 2025</small>
                             <hr class="border-secondary w-50 mx-auto" />
                             <p id="tamu">Kepada Yth.</p>
-                            <p id="nama-tamu" class="font-header playfair-display-uniquifier">nisa</p>
+                            <p id="nama-tamu" class="font-nama-tamu"></p>
 
 
                             <button type="button" class="btn bg-berem btn-secondary text-white rounded-4"
