--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <small class="mt-3">Minggu, 12 Oktober 2025</small>
                             <hr class="border-secondary w-50 mx-auto" />
                             <p id="tamu">Kepada Yth.</p>
-                            <p id="nama-tamu" class="font-nama-tamu">Nisa & Pasangan</p>
+                            <p id="nama-tamu" class="font-nama-tamu"></p>
 
 
                             <button type="button" class="btn bg-berem btn-secondary text-white rounded-4"
@@ -145,8 +145,7 @@
             </p>
 
             <!-- Undangan Teks -->
-            <p class="fs-6 mx-auto" data-aos="zoom-in" data-aos-duration="1000"
-                style="max-width: 1000px; color: #333; font-family: 'DM Serif Text', serif;">
+            <p class="fs-6 mx-auto" data-aos="zoom-in" data-aos-duration="1000">
                 Dengan memohon Rahmat & Ridho Allah SWT, kami bermaksud mengundang Bapak/Ibu/Saudara/i untuk menghadiri
                 acara pernikahan kami:
             </p>
