--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <small class="mt-3">Minggu, 12 Oktober 2025</small>
                             <hr class="border-secondary w-50 mx-auto" />
                             <p id="tamu">Kepada Yth.</p>
-                            <p id="nama-tamu" class="font-nama-tamu"></p>
+                            <p id="nama-tamu" class="font-nama-tamu">nisa</p>
 
 
                             <button type="button" class="btn bg-berem btn-secondary text-white rounded-4"
@@ -145,7 +145,7 @@
             </p>
 
             <!-- Undangan Teks -->
-            <p class="fs-6 mx-auto" data-aos="zoom-in" data-aos-duration="1000">
+            <p class="dm-serif-text-regular fs-6 mx-auto" data-aos="zoom-in" data-aos-duration="1000" style="color: rgb(107, 101, 95);">
                 Dengan memohon Rahmat & Ridho Allah SWT, kami bermaksud mengundang Bapak/Ibu/Saudara/i untuk menghadiri
                 acara pernikahan kami:
             </p>
@@ -171,7 +171,7 @@
                     <h1 class="judul-nama-pengantin fade-in-text" style="margin-top: 70px;">
                         Alpian Sugandi
                     </h1>
-                    <p style="color: #333; font-family: 'DM Serif Text', serif;">Putra Pertama dari 2 Bersaudara dari
+                    <p style="color: rgb(107, 101, 95); font-family: 'DM Serif Text', serif;">Putra Pertama dari 2 Bersaudara dari
                         Bapak Sarbidi & Ibu Jamilah</p>
                 </div>
 
@@ -209,7 +209,7 @@
                     <h1 class="judul-nama-pengantin fade-in-text" style="margin-top: 70px;">
                         Vina Permatasari
                     </h1>
-                    <p style="color: #333; font-family: 'DM Serif Text', serif;">Putri Ke-empat dari 5 Bersaudara dari
+                    <p style="color: rgb(107, 101, 95); font-family: 'DM Serif Text', serif;">Putri Ke-empat dari 5 Bersaudara dari
                         Bapak Alaudin (Alm) & Ibu Lilis Suryani</p>
                 </div>
 
@@ -387,7 +387,7 @@
         </div>
         <div class="py-5">
             <!-- Undangan Teks -->
-            <p class="fs-6 mx-auto" style="max-width: 1000px; color: #333; font-family: 'DM Serif Text', serif;"
+            <p class="fs-6 mx-auto" style="max-width: 1000px; color:rgb(88, 82, 75); font-family: 'DM Serif Text', serif;"
                 data-aos="zoom-in" data-aos-duration="1000">
                 Merupakan suatu kebahagiaan dan kehormatan bagi kami, apabila Bapak/Ibu/Saudara/i, berkenan hadir dan
                 memberikan
@@ -398,6 +398,12 @@
                 data-aos-duration="1000">
                 KAMI YANG BERBAHAGIA
             </p>
+            <p class="dancing-script-uniquifier mb-2 fade-in-text"
+                                style="font-size: 35px; margin: 0; line-height: 1.1; color: #5b472e;">
+                                Alpian<br />
+                                <span class="playfair-uniquifier" style="font-size: 35px; margin: 0; line-height: 1.1; color: #5b472e;">&</span><br />
+                                Vina
+                            </p>
         </div>
     </section>
 
