--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                             <hr class="border-secondary w-50 mx-auto" />
                             <p id="tamu">Kepada Yth.</p>
                             <p id="nama-tamu" class="font-nama-tamu">nisa</p>
+                            <p>di tempat</p>
 
 
                             <button type="button" class="btn bg-berem btn-secondary text-white rounded-4"
