--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             </div><br>
 
             <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#BF9264"
-                class="bi bi-clock-fill" viewBox="0 0 16 16">
+                class="bi bi-clock-fill py-5" viewBox="0 0 16 16">
                 <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm0 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1z" />
                 <path d="M8 4a.5.5 0 0 1 .5.5v3h2a.5.5 0 0 1 0 1h-2.5a.5.5 0 0 1-.5-.5v-3A.5.5 0 0 1 8 4z" />
             </svg>
