--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <img src="assets/img/tanaman-bawah.png" alt="Tanaman Bawah" class="tanaman-bawah">
             </div><br>
         </div>
-<div class="container">
+<div class="pt-5" style="display: flex; align-items: center; gap: 8px;">
             <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#BF9264"
                class="bi bi-envelope-heart-fill" viewBox="0 0 16 16">
                 <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm0 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1z" />
