--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
                 <!-- Tanaman bawah -->
                 <img src="assets/img/tanaman-bawah.png" alt="Tanaman Bawah" class="tanaman-bawah">
             </div><br>
+        </div>
+    </section>
+    <section class="rekening-section py-5 text-center" id="rekening" style="background: #f8f9fa;">
 
             <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#BF9264"
                 class="bi bi-clock-fill" viewBox="0 0 16 16">
